# study-actix-web-simple-auth-server

./: .env  Cargo.toml  README.md
migrations/2020-10-02-090741_users/: up.sql
migrations/2020-10-02-090755_invitations/: up.sql
src/: email_service.rs  invitation_handler.rs  main.rs  models.rs  register_handler.rs  utils.rs
