[package]
name = "simple-auth-server"
version = "0.1.0"
authors = ["satu-n <49983831+satu-n@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.2"
actix-web = "2.0"
actix-rt = "1.1"
# argonautica = "0.2.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "1.4", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3.5"
r2d2 = "0.8"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sparkpost = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
#
rust-argon2 = "0.8"
